--- a/assets/styles/scss/base/_base.scss
+++ b/assets/styles/scss/base/_base.scss
@@ -22,7 +22,7 @@ html {
 
 // #  <body>
 body {
-  min-width: $dimension--xxs;
+  // min-width: $dimension--xxs;
   max-width: $dimension--l;
   margin: $center-me;
   background-color: var(--color-background);
