--- a/assets/styles/scss/base/_typography.scss
+++ b/assets/styles/scss/base/_typography.scss
@@ -8,7 +8,7 @@
 
 // #  <h1>
 h1 {
-  padding: $buffer--m 0;
+  padding: $buffer--m $buffer--xs;
   color: var(--color-primary);
   font-family: $font-family--subject;
   font-size: $font-size--6;
@@ -22,7 +22,7 @@ h1 {
 
 // #  <h2>
 h2 {
-  padding: $buffer--m 0;
+  padding: $buffer--m $buffer--xs;
   color: var(--color-primary);
   font-family: $font-family--section-title;
   font-size: $font-size--5;
