--- a/assets/styles/scss/base/_layout.scss
+++ b/assets/styles/scss/base/_layout.scss
@@ -3,59 +3,65 @@
 \* -------------------------------------------------------------------------- */
 
 /* -------------------------------------------------------------------------- *\
--  Nav
+-  GENERIC TAGS
 \* -------------------------------------------------------------------------- */
 
-// # <<----------<< Generic Tags>>---------->>
-
-header nav {
-  // ...
-  min-width: calc(#{$dimension--xxs} - #{$buffer--xl});
-  max-width: $dimension--xl;
-}
-
-// #  <<----------<< Specific Classes >>---------->>
-
-// ...
-
-/* -------------------------------------------------------------------------- *\
--  Aside
-\* -------------------------------------------------------------------------- */
-
-// #  <<<----------<< Generic Tags>>---------->>
-
-aside {
-  // ...
-}
-
-// #  <<<----------<< Specific Classes >>---------->>
-
-// ...
-
-/* -------------------------------------------------------------------------- *\
--  Section
-\* -------------------------------------------------------------------------- */
-
-// #  <<<----------<< Generic Tags>>---------->>
-
-section {
-  // ...
-}
-
-// #  <<<----------<< Specific Classes >>---------->>
-
-// ...
-
-/* -------------------------------------------------------------------------- *\
--  Article
-\* -------------------------------------------------------------------------- */
-
-// #  <<<----------<< Generic Tags>>---------->>
+// #  <<<----------<< Article >>---------->>
 
 article {
-  // ...
+  padding: $buffer--s;
 }
 
-// #  <<<----------<< Specific Classes >>---------->>
+// #  <<<----------<< Aside >>---------->>
 
-// ...
+aside {
+  padding: $buffer--xs;
+}
+
+// #  <<<----------<< Footer >>---------->>
+
+footer {
+  padding: $buffer--xs;
+}
+
+// #  <<<----------<< Header >>---------->>
+
+header {
+  padding: $buffer--xs;
+  outline: calc(#{$buffer--xxs} / 2) rgb(255, 0, 0) dashed;
+}
+
+// # <<----------<< Nav >>---------->>
+
+nav {
+  @include dimensions;
+
+  max-width: $dimension--l;
+  padding: $buffer--xs;
+}
+
+// #  <<<----------<< Section >>---------->>
+
+section {
+  padding: $buffer--xs;
+}
+
+/* -------------------------------------------------------------------------- *\
+-  CONTAINER CLASSES
+\* -------------------------------------------------------------------------- */
+
+.inline-flex {
+  display: inline-flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  place-content: space-evenly;
+  place-items: stretch stretch;
+}
+
+.flex {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  place-content: space-evenly;
+  place-items: stretch stretch;
+}
