--- a/assets/styles/scss/main.scss
+++ b/assets/styles/scss/main.scss
@@ -37,6 +37,7 @@
 \* ========================================================================== */
 @import 'components/containers';
 @import 'components/container-new';
+@import 'components/containers-3';
 @import 'components/card';
 @import 'components/icon';
 @import 'components/switch';
