--- a/assets/styles/scss/abstracts/mixins/_wireframes.scss
+++ b/assets/styles/scss/abstracts/mixins/_wireframes.scss
@@ -24,23 +24,25 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      background:
-        linear-gradient(to top right,
-        transparent calc(50% - 1px),
-        var(--wireframe--wire) calc(50% - 1px),
-        var(--wireframe--wire) calc(50% + 1px),
-        transparent calc(50% + 1px)),
-        linear-gradient(to bottom right,
-        transparent calc(50% - 1px),
-        var(--wireframe--wire) calc(50% - 1px),
-        var(--wireframe--wire) calc(50% + 1px),
-        transparent calc(50% + 1px)),
+      background: linear-gradient(
+          to top right,
+          transparent calc(50% - 1px),
+          var(--wireframe--wire) calc(50% - 1px),
+          var(--wireframe--wire) calc(50% + 1px),
+          transparent calc(50% + 1px)
+        ),
+        linear-gradient(
+          to bottom right,
+          transparent calc(50% - 1px),
+          var(--wireframe--wire) calc(50% - 1px),
+          var(--wireframe--wire) calc(50% + 1px),
+          transparent calc(50% + 1px)
+        ),
         var(--wireframe--bg-color);
       color: var(--wireframe--wire);
       content: attr(data-wf);
       font: bold 2em Jubilat, Georgia, serif;
-      text-shadow:
-        0 0 0.25em var(--wireframe--bg-color),
+      text-shadow: 0 0 0.25em var(--wireframe--bg-color),
         0 0 0.25em var(--wireframe--bg-color),
         0 0 0.25em var(--wireframe--bg-color),
         0 0 0.25em var(--wireframe--bg-color),
@@ -218,16 +220,5 @@
     }
 
     // -  <<----------<< (13) Custom >>---------->>
-    .block-container {
-      outline: 2.5px rgba(255, 0, 0, 0.75) solid;
-    }
-
-    .flex-container {
-      outline: 2.5px rgba(255, 0, 0, 0.75) solid;
-    }
-
-    .grid-container {
-      outline: 2.5px rgba(255, 0, 0, 0.75) solid;
-    }
   }
 }
