style-main: updating v6

--- a/assets/styles/scss/base/_layout.scss
+++ b/assets/styles/scss/base/_layout.scss
@@ -63,5 +63,5 @@ section {
   flex-direction: column;
   flex-wrap: nowrap;
   place-content: space-evenly;
-  place-items: stretch stretch;
+  place-items: stretch;
 }
