style-main: updating v8

--- a/assets/styles/scss/base/_layout.scss
+++ b/assets/styles/scss/base/_layout.scss
@@ -9,7 +9,7 @@
 // #  <<<----------<< Article >>---------->>
 
 article {
-  padding: $buffer--s;
+  padding: $buffer--xs;
 }
 
 // #  <<<----------<< Aside >>---------->>
