style-main: updating v9

--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -442,6 +442,7 @@ template {
 * {
   padding: 0;
   border: 0;
+  margin: 0 auto;
   margin: 0;
 }
 
@@ -549,7 +550,7 @@ section {
   -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
   place-content: space-evenly;
-  place-items: stretch stretch;
+  place-items: stretch;
 }
 
 .flex {
@@ -795,6 +796,7 @@ header {
 -  NAV MAIN: .main-nav
 \* -------------------------------------------------------------------------- */
 .main-nav__container {
+  margin: 0 auto;
   background-color: lightpink;
 }
 
@@ -1454,8 +1456,8 @@ input:checked + .slider::before {
           flex-direction: row;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  place-content: center;
-  place-content: center;
+  place-content: space-evenly;
+  place-items: stretch;
 }
 
 .hot-item__container {
