--- a/assets/styles/scss/abstracts/_variables.scss
+++ b/assets/styles/scss/abstracts/_variables.scss
@@ -40,6 +40,8 @@ $dimension--l: 1600px;
 $dimension--xl: 1920px;
 $dimension--xxl: 2240px;
 
+$limit--max-width: $dimension--l;
+
 // -  <<----------<< Shadows Colors >>---------->>
 
 // #  Component - Card
