--- a/assets/styles/scss/base/_layout.scss
+++ b/assets/styles/scss/base/_layout.scss
@@ -27,6 +27,7 @@ footer {
 // #  <<<----------<< Header >>---------->>
 
 header {
+  // margin-left: 100px;
   padding: $buffer--xs;
   outline: calc(#{$buffer--xxs} / 2) rgb(255, 0, 0) dashed;
 }
@@ -36,7 +37,7 @@ header {
 nav {
   @include dimensions;
 
-  max-width: $dimension--l;
+  max-width: $limit--max-width;
   padding: $buffer--xs;
 }
 
@@ -55,7 +56,7 @@ section {
   flex-direction: column;
   flex-wrap: nowrap;
   place-content: space-evenly;
-  place-items: stretch stretch;
+  place-items: stretch;
 }
 
 .flex {
