--- a/assets/styles/scss/pages/home-webshop/_section-1--hero.scss
+++ b/assets/styles/scss/pages/home-webshop/_section-1--hero.scss
@@ -10,34 +10,39 @@
   background-size: cover;
 
   &__container {
+    height: 100vh;
+    justify-content: center;
     // animation: linear-gradient 15s ease infinite;
     // background-color: $bg-color--transparant-gray---level-2;
     // background-image: $linear-gradient--combo;
     // background-size: 400% 400%;
     // filter: contrast(50%);
 
-    // background-color: var(--bg-color--transparant---soft);
-    height: 100vh;
-    justify-content: center;
+    background-color: $bg-color--transparant-black---level-2;
+    place-items: center;
   }
 
   &__visual {
-    max-width: fit-content;
     max-height: 40vh;
-    margin: $buffer--m 0;
-    background-color: var(--bg-color--transparant---softest);
-    fill: var(--color-primary);
-    filter: drop-shadow(0 0 0.05rem var(--color-background));
+    padding-top: $buffer--l;
+    // fill: var(--color-secondary);
+    fill: var(--color-tertiary);
+    // fill: var(--color-background);
+    filter: drop-shadow(0 0 0.1em var(--color-foreground));
   }
 
   &__subject {
-    color: var(--color-primary);
-    filter: drop-shadow(0 0 0.05rem var(--color-background));
+    color: var(--color-secondary);
+    // color: var(--color-tertiary);
+    color: var(--color-background);
+    filter: drop-shadow(0 0 0.1em var(--color-foreground));
   }
 
   &__title {
-    color: var(--forground-color);
-    filter: drop-shadow(0 0 0.05rem var(--color-background));
+    color: var(--color-secondary);
+    // color: var(--color-tertiary);
+    // color: var(--color-background);
+    filter: drop-shadow(0 0 0.1em var(--color-foreground));
     font-family: monospace;
     font-size: $font-size--4;
     font-weight: 600;
