--- a/assets/styles/scss/abstracts/_variables.scss
+++ b/assets/styles/scss/abstracts/_variables.scss
@@ -235,7 +235,7 @@ $bg-color--transparant-black---level-4: hsla(0, 0%, 0%, 0.7);
 $bg-color--transparant-black---level-5: hsla(0, 0%, 0%, 0.85);
 
 // -  <<----------<< Filter >>---------->>
-$filter--light: brightness(0.8) contrast(1.2);
+$filter--dark: brightness(0.8) contrast(1.2);
 
 // -----------------------------------------------------------------------------
 // *  Forms Components
