--- a/assets/styles/scss/pages/home-webshop/_section-3--about.scss
+++ b/assets/styles/scss/pages/home-webshop/_section-3--about.scss
@@ -19,7 +19,7 @@
   }
 
   &__container--visual {
-    flex: 1 1 50%;
+    // flex: 1 1 50%;
   }
 
   &__image {
@@ -32,7 +32,7 @@
     min-width: calc(#{$dimension--xxs} - #{$buffer--l});
     max-width: calc((#{$dimension--xxs} / 3) + #{$dimension--xxs});
     // height: 80vh;
-    flex: 1 1 50%;
+    // flex: 1 1 50%;
     // margin: $buffer--m;
     padding: 0;
   }
