--- a/assets/styles/scss/abstracts/_variables.scss
+++ b/assets/styles/scss/abstracts/_variables.scss
@@ -43,6 +43,10 @@ $dimension--xxl: 2240px;
 // #  Specific Dimensions
 $limit--max-width: $dimension--l;
 
+$card-width: 400px;
+$card-height: 80vh;
+$card-aspect-ratio: auto 9 / 16;
+
 // -  <<----------<< Shadows Colors >>---------->>
 
 // #  Component - Card
