--- a/assets/styles/scss/components/_button.scss
+++ b/assets/styles/scss/components/_button.scss
@@ -11,7 +11,7 @@ button {
 // -  <<----------<< Specific >>---------->>
 
 .btn {
-  @include inline-flex-container;
+  // @include inline-flex-container;
   @include flex-items;
 
   position: relative;
