--- a/assets/styles/scss/components/_card.scss
+++ b/assets/styles/scss/components/_card.scss
@@ -9,17 +9,18 @@
   @include box-transition;
 
   overflow: hidden;
-  // width: 100%;
   min-width: calc(#{$dimension--xxs} - (#{$dimension--xxs} / 10));
-  // max-width: calc((#{$dimension--xxs} / 3) + #{$dimension--xxs});
-  // height: 80vh;
-
-  // width: 300px;
-  aspect-ratio: auto 9 / 16;
+  max-width: calc((#{$dimension--l} / 4));
+  aspect-ratio: $card-aspect-ratio;
 
   /* Prevent background color leak outs */
   background-clip: padding-box;
   border-radius: $border-radius--s;
+
+  @include breakpoint(xs) {
+    min-width: $card-width;
+    height: $card-height;
+  }
 
   &:hover {
     @include box-shadow(5);
