--- a/assets/styles/scss/pages/home-webshop/_section-2--hot-items.scss
+++ b/assets/styles/scss/pages/home-webshop/_section-2--hot-items.scss
@@ -46,11 +46,17 @@
     z-index: 1;
     right: 0;
     bottom: 0%;
-    bottom: -29%;
+    // bottom: -30%;
     left: 0;
     padding: $buffer--s;
     background-color: $bg-color--transparant-black---level-3;
     box-shadow: $box-shadow--caption---slide-in;
+    height: 320px;
+
+    @include breakpoint(xs) {
+      bottom: calc(#{$dimension--xxs} - (#{$dimension--xxs} / 10));
+      bottom: 0%;
+    }
   }
 
   &__caption-title {
@@ -63,7 +69,7 @@
 
   &__caption-text {
     overflow: auto;
-    height: calc(#{$dimension--xxs} / 3);
+    height: calc(#{$dimension--xxs} / 2);
     margin: $buffer--s 0;
     color: var(--color-background);
   }
@@ -74,8 +80,8 @@
   }
 
   &__caption-btns {
-    @include dimensions;
-    @include inline-flex-container(nowrap, row, space-between, center);
+    flex-direction: row;
+    height: 25%;
   }
 
   &__caption-btn {
